--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "gsap": "^2.1.3",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
-    "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.3",
+    "scrollmagic-with-ssr": "^1.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
