--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.28",
     "gsap": "^2.1.3",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
     "scrollmagic": "^2.0.7",
-    "vue": "^2.5.2",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
