--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0",
     "scrollmagic": "^2.0.7",
+    "smooth-scrollbar": "^8.4.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1"
   },
